downgrade to using Java 11