@@ -11,6 +11,7 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.concurrent.CompletableFuture;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 
@@ -124,7 +125,7 @@ public class MailserverConfigurationDiscovery {
         .flatMap( List::stream )
         .map( CompletableFuture::join )
         .flatMap( List::stream )
-        .toList();
+        .collect( Collectors.toList() );
     //@formatter:on
   }
 }
